@@ -5,6 +5,9 @@ update-manager (1:0.140) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeController.py:
     - start apport only, do not modify any conffile (all versions
       of apport we upgrade from support this now)
+  * UpdateManager/UpdateManager.py:
+    - fix crash when format string has the wrong number of arguments
+      (LP: #569469)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 20 Apr 2010 11:40:44 +0200
 
